--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -1,17 +1,15 @@
-name: Super-Linter
+name: Super Linter
 
-on: push
+on:
+  push:
 
-jobs :
-  super-lint:
-    name: Lint code base
+jobs:
+  lint:
     runs-on: ubuntu-latest
-    steps :
-      - name: Checkout code
-        uses: actions/checkout@v2
 
-      - name: Run Super-Linter
-        uses: github/super-linter@v3
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: github/super-linter@v5
         env:
-          DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
